feat: Implement property purchase dialog and display player ID
This commit introduces a dialog for purchasing properties during the game. When a player lands on an unowned property, a dialog will appear asking if they want to buy it.

Additionally, the GameBoardActivity now displays the current player's username and ID.

Specific changes:
- Added `showBuyDialog` function in `GameBoardActivity.kt` to display the purchase confirmation dialog.
- Integrated the buy dialog functionality into `GameClientHandler.kt`.
- Created `dialog_buy_card.xml` for the layout of the buy dialog.
- Added a `TextView` (`textYouArePlayer`) in `activity_game.xml` to display the current player's information.
- Updated `GameBoardActivity.kt` to initialize and update `textYouArePlayer`.
- Added a string resource `youArePlayer` for the player information display.
- Renamed string resource `stra_e` to `strasse`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">SE2 DKT</string>
 
 <!--    GameBoardActivity-->
+    <string name="youArePlayer">You are: %1$s, %2$d</string>
     <string name="nickname_turn">%1$s ist an Zug</string>
     <string name="rolled_value">Gewürfelt: %1$d</string>
     <string name="landed_on">Gelandet auf: %1$s</string>
@@ -77,12 +78,15 @@
     <string name="du_musst_steuern_zahlen">Du musst Steuern zahlen!</string>
 
 <!--    TileDialog-->
-    <string name="stra_e">Straße</string>
+    <string name="strasse">Straße</string>
     <string name="kaufpreis_xxx">Kaufpreis: XXX €</string>
     <string name="miete_xxx">Miete: XXX €</string>
     <string name="hauskosten_xxx">Hauskosten: XXX €</string>
     <string name="hotelkosten_xxx">Hotelkosten: XXX €</string>
     <string name="schliessen">SCHLIESSEN</string>
+
+<!--    BuyDialog-->
+    <string name="buy">Buy</string>
 
 <!--    LobbyList-->
     <string name="new_lobby">New Lobby</string>
