--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="youArePlayer">You are: %1$s, %2$d</string>
     <string name="nickname_turn">%1$s ist an Zug</string>
     <string name="rolled_value">Gewürfelt: %1$d</string>
-    <string name="landed_on">Gelandet auf: %1$s</string>
-    <string name="geld_text">Gelandet auf: %1$d</string>
+    <string name="landed_on">Gelandet auf: %1$s - %2$d</string>
+    <string name="geld_text">Kapital: %1$d</string>
 
 
 <!--    LobbyActivity-->
